concord_macros/tests/trybuild/fail/sema/route/secret_in_host_atom.stderr
error: secret references are only allowed in credential declarations
  --> tests/trybuild/fail/sema/route/secret_in_host_atom.rs:10:22
   |
10 |         host [secret.token]
   |                      ^^^^^
